Fix content & footer z-indexes

--- a/sources/stylesheets/_general.scss
+++ b/sources/stylesheets/_general.scss
@@ -52,6 +52,10 @@ body {
 
   .semimodal-relative & {
     top: 24px;
+
+    @include query($tablet-1) {
+      display: none;
+    }
   }
 }
 
@@ -82,6 +86,7 @@ body {
   box-sizing: border-box;
   transform: translate3d(0, 0, 0);
   width: 100%;
+  z-index: 1;
 
   a {
     text-decoration: none;
