--- a/sources/stylesheets/components/_footer.scss
+++ b/sources/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@
   width: calc(100% - 64px);
 
   &_content {
-    z-index: 1;
+    z-index: 0;
 
     &-hidden {
       .footer & {
