--- a/sources/stylesheets/components/_search.scss
+++ b/sources/stylesheets/components/_search.scss
@@ -86,6 +86,7 @@
   background: none;
   box-sizing: border-box;
   border: none;
+  width: 100%;
 
   // Removes the clear input button in IE11
   &::-ms-clear {
