--- a/sources/stylesheets/components/_semimodal.scss
+++ b/sources/stylesheets/components/_semimodal.scss
@@ -143,7 +143,6 @@
 
 .content_wrap {
   box-sizing: border-box;
-  overflow: hidden;
   position: relative;
 }
 
